<resources>
    <string name="app_name">BookingSena</string>
    <!--LOGIN-->
    <string name="action_sign_in_short"> REGISTRO</string>
    <string name="email"> Correo electrónico </string>    
    <string name="minimum_password"> Contraseña demasiado corta, ingrese un mínimo de 6 caracteres </string>
     
    <string name="auth_failed"> Error de autenticación, verifique su correo electrónico y contraseña o regístrese </string>
      
    <string name="change_email"> Cambiar correo electrónico </string>
    <string name="change_password"> Cambiar contraseña </string>
    <string name="send_password_reset_email"> Enviar correo electrónico de restablecimiento de contraseña </string>
    <string name="remove_user"> Eliminar usuario </string> 
    <string name="new_pass"> Nueva contraseña </string>
    <string name="title_activity_profile"> Firebase </string>
    <string name="title_activity_login"> Iniciar sesión </string>
    <string name="hint_email"> Correo electrónico </string>
    <string name="hint_password"> Contraseña </string>
    <string name="hint_name"> Nombre completo </string>
    <string name="btn_login"> INICIAR SESIÓN </string>
    <string name="btn_link_to_register"> ¿No eres miembro? ¡Regístrese ahora! </string>   
    <string name="btn_link_to_login"> Ya registrado. ¡Inicia sesión conmigo! </string> 
    <!--<string name="title_activity_reset_password"> ResetPasswordActivity </string>  --> 
    <string name="btn_forgot_password"> ¿Olvidó su contraseña? </string>
    <string name="btn_reset_password"> RESTABLECER CONTRASEÑA </string>
    <string name="btn_back"> <![CDATA[<< Atrás]]> </string>   
    <string name="hint_new_email"> Nuevo correo electrónico </string>  
    <string name="btn_change"> Cambiar </string>  
    <string name="btn_send"> Enviar </string>
    <string name="btn_remove"> Eliminar </string> 
    <string name="btn_sign_out"> Cerrar sesión </string>  
    <string name="sign_in_with_google"> Inicia sesión con Google </string>
    <string name="lbl_forgot_password"> ¿Olvidó su contraseña?</string>  
    <string name="lbl_o"> O </string>  
    <string name="forgot_password_msg"> Solo necesitamos su ID de correo electrónico registrada para enviarle las instrucciones para restablecer la contraseña. </string>
    <string name="settings_name"> Configuración de la cuenta </string>
    <!--NAV-->
    <string name="abrir">Iniciar Navegacion</string>
    <string name="cerrar">Cerrar Navegacion</string>
    <string name="copyright">Usuario Pepito P</string>
    <!--MAPAS-->
    <string name="error_permission_map">Falta de permisos</string>
    <string name="coordenada_actual">Coordenadas del Lugar</string>
    <string name="coordenada_busqueda">Coordenada de Busqueda</string>
    <string name="ingrese_las_coordenadas">Ingrese las Coordenadas</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="obtener">Obtener</string>
    <string name="ubicacion">Tu ubicacion</string>
    <string name="reservar_ahora">Reservá ahora</string>

    <!--DESCRIPCION-->
    <string name="ubicacion_lugar">Ubicacion del lugar</string>

    <!--RESERVA-->
    <string name="campos_obligatorios">Los campos marcados con * son obligatorios</string>
    <string name="fecha_registro">* Fecha registro</string>
    <string name="fecha_llegada">* Fecha llegada</string>
    <string name="fecha_salida">* Fecha salida</string>
    <string name="estado">Estado</string>
    <string name="valor_estado">0</string>
    <string name="pago">* Pago</string>
    <string name="alojamiento">Alojamiento</string>
    <string name="cliente">Cliente</string>

    <string name="reservar">Reservar</string>
    <string name="cancelar">Cancelar</string>


       
</resources>
