<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity"
    android:background="@drawable/bg_login"
    android:id="@+id/navigation_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include android:id="@+id/update_wall_page_toolbar"
            layout="@layout/app_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/old_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                android:singleLine="true"
                android:maxLines="1" />
            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/hint_new_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                android:singleLine="true"
                android:maxLines="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleTint="@color/login_form_details">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/et_bg"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_pass"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColorHint="@color/login_form_details" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_change"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />
            <Button
                android:id="@+id/changePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_change"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />
            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_send"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone" />
            <Button
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_remove"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />


            <Button
                android:id="@+id/change_email_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_email"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_password_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_password"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sending_pass_reset_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_password_reset_email"
                android:textStyle="bold" />

            <Button
                android:id="@+id/remove_user_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remove_user"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/drawer_background_selector"
        app:itemIconTint="@drawable/drawer_selector"
        app:itemTextColor="@drawable/drawer_selector"/>


</androidx.drawerlayout.widget.DrawerLayout>